# my_Webportfolio

./: CUSTOMIZATIONS_SUMMARY.md  IMPROVEMENTS.md  README.md  copilot-instructions.md  main.py  main_launcher.py  pyproject.toml
.github/instructions/: flet-python.instructions.md
.github/prompts/: add-portfolio-section.prompt.md  test-responsive-design.prompt.md
.github/skills/design-system/: SKILL.md
.github/workflows/: deploy-web.yml
Web_portfolio_files/: rive_native.js.download
src/: main.py
